Added listBuckets to API